Seal verification and cache fail-open paths